safari rounded overflow fix

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -33,7 +33,8 @@ main {
 .portfolio-card {
   margin: 30px;
   border-radius: 25px;
-  overflow: hidden;
+	overflow: hidden;
+	-webkit-mask-image: -webkit-radial-gradient(white, black);
 }
 
 .skills-jumbotron {
